[gd_scene load_steps=2 format=3 uid="uid://vv7prbxwd2mx"]

[ext_resource type="Script" path="res://code/join_event.gd" id="1_ns3n4"]

[node name="join_event" type="Control" node_paths=PackedStringArray("name_field", "event_code", "wallet_dropdown", "join_button", "cancel_button", "join_screen", "connecting_screen", "connecting_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ns3n4")
name_field = NodePath("join/VBoxContainer/name_field")
event_code = NodePath("join/VBoxContainer/event_code")
wallet_dropdown = NodePath("join/VBoxContainer/wallet_dropdown")
join_button = NodePath("join/VBoxContainer/join_button")
cancel_button = NodePath("join/VBoxContainer/cancel_button")
join_screen = NodePath("join")
connecting_screen = NodePath("connecting")
connecting_label = NodePath("connecting/connecting_label")

[node name="join" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="join"]
offset_left = 887.0
offset_top = 372.0
offset_right = 1033.0
offset_bottom = 708.0

[node name="headers" type="Label" parent="join/VBoxContainer"]
offset_right = 146.0
offset_bottom = 26.0
text = "JOIN AN EVENT"
horizontal_alignment = 1

[node name="name_field" type="TextEdit" parent="join/VBoxContainer"]
offset_top = 30.0
offset_right = 146.0
offset_bottom = 65.0
placeholder_text = "YOUR NAME"
scroll_fit_content_height = true
caret_blink = true

[node name="event_code" type="TextEdit" parent="join/VBoxContainer"]
offset_top = 69.0
offset_right = 146.0
offset_bottom = 104.0
placeholder_text = "EVENT CODE"
scroll_fit_content_height = true
caret_blink = true

[node name="spacer2" type="Control" parent="join/VBoxContainer"]
custom_minimum_size = Vector2i(0, 50)
layout_mode = 3
anchors_preset = 0
offset_top = 108.0
offset_right = 146.0
offset_bottom = 158.0

[node name="headers2" type="Label" parent="join/VBoxContainer"]
offset_top = 162.0
offset_right = 146.0
offset_bottom = 188.0
text = "CHOOSE A WALLET"

[node name="wallet_dropdown" type="OptionButton" parent="join/VBoxContainer"]
offset_top = 192.0
offset_right = 146.0
offset_bottom = 212.0

[node name="spacer" type="Control" parent="join/VBoxContainer"]
custom_minimum_size = Vector2i(0, 50)
layout_mode = 3
anchors_preset = 0
offset_top = 216.0
offset_right = 146.0
offset_bottom = 266.0

[node name="join_button" type="Button" parent="join/VBoxContainer"]
offset_top = 270.0
offset_right = 146.0
offset_bottom = 301.0
text = "JOIN"

[node name="cancel_button" type="Button" parent="join/VBoxContainer"]
offset_top = 305.0
offset_right = 146.0
offset_bottom = 336.0
text = "CANCEL"

[node name="connecting" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="connecting_label" type="Label" parent="connecting"]
custom_minimum_size = Vector2i(300, 0)
offset_left = 810.0
offset_top = 527.0
offset_right = 1110.0
offset_bottom = 553.0
grow_horizontal = 2
grow_vertical = 2
text = "CONNECTING..."
